# Modular-Math

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
api/: main.py  schemas.py
src/modMath/: Exceptions.py  Mod_int.py  __init__.py  cryptography.py  exceptions.py  mod_int.py  number_theory.py
tests/: test_api.py  test_cryptography.py  test_mod_int.py  test_number_theory.py
