[project]
name = "modmath"
version = "0.1.0"
description = "A library for modular arithmetic"
authors = [
    {name = "Dennis",email = "denni@example.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
