[project]
name = "modmath"
version = "0.1.0"
description = "A library for modular arithmetic"
authors = [
    {name = "Dennis",email = "ismajli.dennis@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "modMath", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
httpx = ">=0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
